# blog

./: .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/complete/envs/: envs.md
_sources/complete/envs/r_setting_on_mac/: body.ipynb  body.md
_sources/ideation/: about_ideation.md
articles/: _config.yml  _toc.yml  index.md
articles/_build/.doctrees/: environment.pickle  index.doctree
articles/_build/.doctrees/complete/: about_complete.doctree
articles/_build/.doctrees/ideation/: about_ideation.doctree
articles/_build/.doctrees/in_progress/: about_in_progress.doctree
articles/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
articles/_build/html/complete/: about_complete.html
articles/complete/: about_complete.md
articles/complete/envs/r_setting_on_mac/: body.ipynb
articles/ideation/: about_ideation.md
articles/in_progress/: about_in_progress.md
articles/in_progress/python_design_patterns/abstract_factory/: factory.py  main.py  product.py
articles/in_progress/python_design_patterns/factory_method/: creator.py  main.py  product.py
complete/envs/: envs.html
complete/envs/r_setting_on_mac/: body.html
ideation/: about_ideation.html
in_progress/: about_in_progress.html
