[tool.poetry]
name = "blog"
version = "0.1.0"
description = "chanheelee's blog"
authors = ["Chanhee Lee <qjzx6428@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^0.13.1"
numpy = "^1.24.1"
scipy = "^1.9.3"
pandas = "^1.5.2"
jupyter = "^1.0.0"
jupytext = "^1.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
